fixed: extra whitespace bottom of the organize

--- a/src/main/frontend/src/app/components/organize-recordings/organize-recordings.component.scss
+++ b/src/main/frontend/src/app/components/organize-recordings/organize-recordings.component.scss
@@ -3,34 +3,55 @@
         text-align: center;
     }
 
-    .folder-tree-section {
-        border-right: 1px solid black;
-        
-        .folder-tree {
-            height: 430px;
-            overflow-y: auto;
-            margin-bottom: 5px;
-        }
-    }
+    .organize-box {
+        display: flex;
+        flex-direction: row;
 
-    .edit-recording-section {
-        .recording-name {
-            text-align: center;
-            padding: 5px 0;
-            height: 30px;
-            border: 1px solid black;
-        }
+        .folder-tree-section {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            border-right: 1px solid black;
+            margin-right: 30px;
 
-        textarea {
-            width: 100%;
-            height: 400px;
+            .folder-tree {
+                flex: 2 70vh;
+                overflow-y: auto;
+            }
+
+            .persist-actions {
+                flex: 1;
+            }
         }
 
-        .recording-actions {
-            text-align: right;
+        .edit-recording-section {
+            flex: 2;
+            display: flex;
+            flex-direction: column;
+
+            .recording-name {
+                flex: 1 30px;
+                text-align: center;
+                padding: 5px 0;
+                height: 30px;
+                border: 1px solid black;
+            }
+
+            .recording-textarea {
+                flex: 1 65vh;
+                textarea {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .recording-actions {
+                flex: 1;
+                text-align: right;
             
-            .mat-raised-button:last-child {
-                margin-left: 5px;
+                .mat-raised-button:last-child {
+                    margin-left: 5px;
+                }
             }
         }
     }
